--- a/WebContent/CadastroPaciente.html
+++ b/WebContent/CadastroPaciente.html
@@ -10,21 +10,49 @@
 
 <body>
     <main class="centro">
-        <form class="form" method="get" action="cadastropaciente">
+        <form class="form" method="post" action="cadastropaciente">
             <input id="nome" type="text" placeholder="Nome" name="nome" autofocus required>
             <input id="sobrenome" type="text" placeholder="Sobrenome" name="sobrenome" required><br>
             <input id="cpf" type="text" placeholder="CPF" name="cpf" size="11" maxlength="11" required><br>
             <input id="endereco" type="text" placeholder="Endereço" name="endereco">
             <input id="numero" type="text" placeholder="Número" name="numero"><br>
             <input id="bairro" type="text" placeholder="Bairro" name="bairro"><br>
-            <input id="cep" type="text" placeholder="CEP" name="cep" size="5" maxlength="5" > - <input id="cep2" placeholder="CEP" type="text" name="cep2" size="3" maxlength="3"><br>
-            <input id="uf" type="text" placeholder="UF" name="uf" maxlength="2"><br>
+            <input id="cep" type="text" placeholder="CEP" name="cep" size="9" maxlength="9" onkeypress="mascara(this, '#####-###')"><br>            
+			<select id="uf" name="uf">
+				<option value="AC">Acre</option>
+				<option value="AL">Alagoas</option>
+				<option value="AP">Amapá</option>
+				<option value="AM">Amazonas</option>
+				<option value="BA">Bahia</option>
+				<option value="CE">Ceará</option>
+				<option value="DF">Distrito Federal</option>
+				<option value="ES">Espírito Santo</option>
+				<option value="GO">Goiás</option>
+				<option value="MA">Maranhão</option>
+				<option value="MT">Mato Grosso</option>
+				<option value="MS">Mato Grosso do Sul</option>
+				<option value="MG">Minas Gerais</option>
+				<option value="PA">Pará</option>
+				<option value="PB">Paraíba</option>
+				<option value="PR">Paraná</option>
+				<option value="PE">Pernambuco</option>
+				<option value="PI">Piauí</option>
+				<option value="RJ">Rio de Janeiro</option>
+				<option value="RN">Rio Grande do Norte</option>
+				<option value="RS">Rio Grande do Sul</option>
+				<option value="RO">Rondônia</option>
+				<option value="RR">Roraima</option>
+				<option value="SC">Santa Catarina</option>
+				<option value="SP">São Paulo</option>
+				<option value="SE">Sergipe</option>
+				<option value="TO">Tocantins</option>
+			</select><br>            
             <input id="cidade" type="text" placeholder="Cidade" name="cidade"><br>
             <input id="municipio" type="text" placeholder="Distrito" name="municipio"><br>
             <button id="btn_cadastrar" class="btn" type="submit" style="cursor:hand" name="cadastrar">Cadastrar</button>
         </form>
     </main>
-
+	<script src="js/script.js"></script>
 </body>
 
 </html>
