Atualização Projeto dia 16/11/2018

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,7 +16,7 @@
             <span>Iniciar<br>atentimento</span>
         </article>
         <article>
-            <a href="CadastroPaciente.html"><img src="img/online-booking.svg" width="127" height="105"></a>
+            <a href="CadastroPaciente.jsp"><img src="img/online-booking.svg" width="127" height="105"></a>
             <span>Cadastrar<br>paciente</span>
         </article>
         <article>
