--- a/WebContent/iniciarAten.html
+++ b/WebContent/iniciarAten.html
@@ -12,9 +12,9 @@
     <main class="centro">
         <form class="form" method="post" action="IniciarAtendimento">
                     <input id="cpf_paciente" type="text" placeholder="CPF do Paciente" name="cpf_paciente" autofocus><br>
-            <input id="nome" type="text" placeholder="Nome do Paciente" name="nome"><br>
             <textarea id="descricao" class="descricao" type="text" placeholder="Descrição do problema a ser tratado" name="descricao" size="140"></textarea><br>
-            <button class="btn" id="btn_atendimento" type="submit" style="cursor:hand" name="atendimento">Iniciar</button>
+            <button class="btn" id="btn_atendimento" type="submit" style="cursor:hand" name="atendimento">Iniciar</button><br>
+            <span>OBS: para iniciar um atendimento, é preciso ter previamente um paciente cadastrado com o CPF especifico.</span>
         </form>
     </main>
 </body>
